--- a/src/main/resources/templates/mark/add.html
+++ b/src/main/resources/templates/mark/add.html
@@ -17,9 +17,9 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
+        <span class="icon-bar"></span>
       </button>
-      <img src="/img/student-48.png" alt="logo"/>
+      <img src="/images/student-48.png" alt="logo"/>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
