--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,8 @@
 <head th:replace="fragments/head"></head>
 <body>
 <nav th:replace="fragments/nav"></nav>
-<div class="container" style="text-align: center"><h2>Bienvenidos a la página principal</h2>
+<div class="container" style="text-align: center">
+    <h2 th:text="#{welcome.message}"></h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p></div>
 <footer th:replace="fragments/footer"></footer>
 </body>
