--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -11,10 +11,9 @@
                                                            th:errors="*{dni}"></span></div>
         </div>
         <div class="form-group"><label class="control-label col-sm-2" for="name">Nombre:</label>
-            <div class="col-sm-10"><input type="text" class="form-control" id="name" name="name"
-                                          placeholder="Ejemplo: Juan José" required/> <span class="text-danger"
-                                                                                            th:if="${#fields.hasErrors('name')}"
-                                                                                            th:errors="*{name}"></span>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="name" name="name" placeholder="Ejemplo: Juan José" required/>
+                <span class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
             </div>
         </div>
         <div class="form-group"><label class="control-label col-sm-2" for="lastName">Apellidos:</label>
