--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -32,9 +32,12 @@
         </div>
         <div class="form-group"><label class="control-label col-sm-2" for="passwordConfirm">Repita el Password:</label>
             <div class="col-sm-10"><input type="password" class="form-control" id="passwordConfirm"
-                                          name="passwordConfirm" placeholder="Repita el Password"/> <span
+                                          name="passwordConfirm" placeholder="Repita el Password"/>
+                <span
                     class="text-danger" th:if="${#fields.hasErrors('passwordConfirm')}"
-                    th:errors="*{passwordConfirm}"></span></div>
+                    th:errors="*{passwordConfirm}"></span>
+
+            </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
