--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:replace="fragments/head"/>
 <body>
 <nav th:replace="fragments/nav"/>
 <div class="container" style="text-align: center"><h2 th:text="#{welcome.message}"></h2>
     <h3>Esta es una zona privada la web</h3>
-    <p> Usuario Autenticado como : <b th:inline="text"> [[${#httpServletRequest.remoteUser}]] </b>
+    <p> Usuario Autenticado como : <b th:inline="text" sec:authentication="principal.username"></b>
     </p>
 
     <p>Notas del usuario</p>
@@ -27,8 +28,38 @@
                 <td th:text="${mark.description}"> Ejercicio 1</td>
                 <td th:text="${mark.score}">10</td>
                 <td><a th:href="${'/mark/details/' + mark.id}">detalles</a></td>
-                <td><a th:href="${'/mark/edit/' + mark.id}">modificar</a></td>
-                <td><a th:href="${'/mark/delete/' + mark.id}">eliminar</a></td>
+                <td><a sec:authorize="hasRole('ROLE_PROFESSOR')" th:href="${'/mark/edit/' + mark.id}">modificar</a>
+
+                    <div sec:authorize="hasRole('ROLE_STUDENT')">
+                        <div th:if="${mark.resend}">
+                            <!-- <a th:href="${'/mark/' + mark.id + '/noresend'}">Reenviar</a>-->
+                            <button type="button" th:id="${'resendButton' + mark.id}" class="btn btn-success">Reenviar
+                            </button>
+                            <script th:inline="javascript"> /*<![CDATA[*/
+                            $("#resendButton" + "[[${mark.id}]]").click(function () {
+                                $.get("/mark/[[${mark.id}]]/noresend", function (data) {
+                                    $("#tableMarks").load('/home');
+                                });
+                            }); /*]]>*/
+                            </script>
+                        </div>
+                        <div th:unless="${mark.resend}">
+                            <!--<a th:href="${'/mark/' + mark.id + '/resend'}">No reenviar</a>-->
+                            <button type="button" th:id="${'noresendButton' + mark.id}" class="btn btn-info">No
+                                reenviar
+                            </button>
+                            <script th:inline="javascript"> /*<![CDATA[*/
+                            $("#noresendButton" + "[[${mark.id}]]").click(function () {
+                                $.get("/mark/[[${mark.id}]]/resend", function (data) {
+                                    $("#tableMarks").load('/home');
+                                });
+                            }); /*]]>*/ </script>
+                        </div>
+                    </div>
+
+                </td>
+                <td><a sec:authorize="hasRole('PROFESSOR')"
+                       th:href="${'/mark/delete/' + mark.id}">eliminar</a>
             </tr>
             </tbody>
         </table>
