--- a/src/main/resources/templates/mark/list.html
+++ b/src/main/resources/templates/mark/list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:replace="fragments/head"/>
 <body>
 <nav th:replace="fragments/nav"></nav>
@@ -7,7 +8,6 @@
 
 <div class="container" id="main-container">
     <h2>Notas</h2>
-
 
 
     <p>Las notas que actualmente figuran en el sistema son las siguientes:</p>
@@ -38,16 +38,46 @@
                 <td th:text="${mark.description}"> Ejercicio 1</td>
                 <td th:text="${mark.score}">10</td>
                 <td><a th:href="${'/mark/details/' + mark.id}">detalles</a></td>
-                <td><a th:href="${'/mark/edit/' + mark.id}">modificar</a></td>
-                <td><a th:href="${'/mark/delete/' + mark.id}">eliminar</a></td>
-            </tr>
+                <td><a sec:authorize="hasRole('ROLE_PROFESSOR')" th:href="${'/mark/edit/' + mark.id}">modificar</a>
+
+                    <div sec:authorize="hasRole('ROLE_STUDENT')">
+                        <div th:if="${mark.resend}">
+                            <!-- <a th:href="${'/mark/' + mark.id + '/noresend'}">Reenviar</a>-->
+                            <button type="button" th:id="${'resendButton' + mark.id}" class="btn btn-success">Reenviar
+                            </button>
+                            <script th:inline="javascript"> /*<![CDATA[*/
+                            $("#resendButton" + "[[${mark.id}]]").click(function () {
+                                $.get("/mark/[[${mark.id}]]/noresend", function (data) {
+                                    $("#tableMarks").load('/mark/list/update');
+                                });
+                            }); /*]]>*/
+                            </script>
+                        </div>
+                        <div th:unless="${mark.resend}">
+                            <!--<a th:href="${'/mark/' + mark.id + '/resend'}">No reenviar</a>-->
+                            <button type="button" th:id="${'noresendButton' + mark.id}" class="btn btn-info">No
+                                reenviar
+                            </button>
+                            <script th:inline="javascript"> /*<![CDATA[*/
+                            $("#noresendButton" + "[[${mark.id}]]").click(function () {
+                                $.get("/mark/[[${mark.id}]]/resend", function (data) {
+                                    $("#tableMarks").load('/mark/list/update');
+                                });
+                            }); /*]]>*/ </script>
+                        </div>
+                    </div>
+
+                </td>
+                    <td><a sec:authorize="hasRole('PROFESSOR')"
+               th:href="${'/mark/delete/' + mark.id}">eliminar</a>
+                </tr>
             </tbody>
         </table>
     </div>
-    <div th:if="${#lists.isEmpty(markList)}"> No marks</div>
-</div>
+        <div th:if="${#lists.isEmpty(markList)}"> No marks</div>
+    </div>
 
 
-</body>
-<footer th:replace="fragments/footer"/>
+    </body>
+        <footer th:replace="fragments/footer"/>
 </html>
