--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,13 +4,15 @@
 <head th:replace="fragments/head"/>
 <body>
 <nav th:replace="fragments/nav"/>
-<div class="container" style="text-align: center"><h2 th:text="#{welcome.message}"></h2>
+<div class="container" style="text-align: center">
+    <h2 th:text="#{welcome.message}"></h2>
     <h3>Esta es una zona privada la web</h3>
     <p> Usuario Autenticado como : <b th:inline="text" sec:authentication="principal.username"></b>
     </p>
 
     <p>Notas del usuario</p>
     <div class="table-responsive">
+
         <table class="table table-hover" th:fragment="tableMarks" id="tableMarks">
             <thead>
             <tr>
@@ -38,7 +40,7 @@
                             <script th:inline="javascript"> /*<![CDATA[*/
                             $("#resendButton" + "[[${mark.id}]]").click(function () {
                                 $.get("/mark/[[${mark.id}]]/noresend", function (data) {
-                                    $("#tableMarks").load('/home');
+                                    $("#tableMarks").load('/mark/list/update');
                                 });
                             }); /*]]>*/
                             </script>
@@ -51,7 +53,7 @@
                             <script th:inline="javascript"> /*<![CDATA[*/
                             $("#noresendButton" + "[[${mark.id}]]").click(function () {
                                 $.get("/mark/[[${mark.id}]]/resend", function (data) {
-                                    $("#tableMarks").load('/home');
+                                    $("#tableMarks").load('/mark/list/update');
                                 });
                             }); /*]]>*/ </script>
                         </div>
@@ -64,10 +66,12 @@
             </tbody>
         </table>
     </div>
-
+    <div th:if="${#lists.isEmpty(markList)}"> No marks</div>
 </div>
 
 
-<footer th:replace="fragments/footer"/>
 </body>
+
+<footer th:replace="fragments/footer"/>
+
 </html>
