--- a/src/main/resources/templates/mark/list.html
+++ b/src/main/resources/templates/mark/list.html
@@ -9,6 +9,14 @@
 <div class="container" id="main-container">
     <h2>Notas</h2>
 
+    <form class="form-inline" action="/mark/list">
+        <div class="form-group">
+
+            <input name="searchText" type="text" class="form-control" size="50"
+                   placeholder="Buscar por descripción o nombre del alumno"></div>
+        <button type="submit" class="btn btn-primary">Buscar</button>
+    </form>
+
 
     <p>Las notas que actualmente figuran en el sistema son las siguientes:</p>
 
@@ -68,16 +76,16 @@
                     </div>
 
                 </td>
-                    <td><a sec:authorize="hasRole('PROFESSOR')"
-               th:href="${'/mark/delete/' + mark.id}">eliminar</a>
-                </tr>
+                <td><a sec:authorize="hasRole('PROFESSOR')"
+                       th:href="${'/mark/delete/' + mark.id}">eliminar</a>
+            </tr>
             </tbody>
         </table>
     </div>
-        <div th:if="${#lists.isEmpty(markList)}"> No marks</div>
-    </div>
+    <div th:if="${#lists.isEmpty(markList)}"> No marks</div>
+</div>
 
 
-    </body>
-        <footer th:replace="fragments/footer"/>
+</body>
+<footer th:replace="fragments/footer"/>
 </html>
