--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -13,7 +13,9 @@
 
                 <span class="text-danger"
                       th:if="${#fields.hasErrors('dni')}"
-                      th:errors="*{dni}"></span>
+                      th:errors="*{dni}">
+
+                </span>
 
             </div>
         </div>
