SDI-2122-304-sesion4-Ejercicio-complementario1

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -60,7 +60,7 @@
                     </div>
 
                 </td>
-                <td><a sec:authorize="hasRole('PROFESSOR')"
+                <td><a sec:authorize="hasRole('ROLE_PROFESSOR')"
                        th:href="${'/mark/delete/' + mark.id}">eliminar</a>
             </tr>
             </tbody>
