--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -29,12 +29,16 @@
                     </div>
 
                 </li>
-                <li sec:authorize="hasRole('ROLE_ADMIN')" id="professor-menu" class="nav-item dropdown"><a
+                <li sec:authorize="isAuthenticated()" id="professor-menu" class="nav-item dropdown"><a
                         class="nav-link dropdown-toggle" href="#" id="profesorDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Gestión de profesores </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown"><a class="dropdown-item"
                                                                                    href="/professor/list">Ver
-                        profesores</a></div>
+                        profesores</a>
+
+                        <a class="dropdown-item" sec:authorize="hasRole('ROLE_ADMIN')" href="/professor/add">Añadir profesor</a>
+
+                    </div>
                 </li>
             </ul>
         </div>
